--- a/trunk/PyChat 1.16/res/main.ui
+++ b/trunk/PyChat 1.16/res/main.ui
@@ -22,20 +22,29 @@
   <property name="whatsThis">
    <string notr="true"/>
   </property>
-  <property name="accessibleName">
-   <string notr="true"/>
-  </property>
-  <property name="accessibleDescription">
-   <string notr="true"/>
-  </property>
   <property name="windowFilePath">
+   <string notr="true"/>
+  </property>
+  <property name="accessibleName" stdset="0">
+   <string notr="true"/>
+  </property>
+  <property name="accessibleDescription" stdset="0">
    <string notr="true"/>
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QGridLayout" name="gridLayout_2">
+    <property name="margin">
+     <number>0</number>
+    </property>
+    <property name="spacing">
+     <number>0</number>
+    </property>
     <item row="0" column="0">
      <widget class="QWidget" name="widget_Top" native="true">
       <layout class="QHBoxLayout" name="horizontalLayout">
+       <property name="spacing">
+        <number>0</number>
+       </property>
        <property name="margin">
         <number>0</number>
        </property>
@@ -80,7 +89,7 @@
        <enum>QTabWidget::South</enum>
       </property>
       <property name="tabShape">
-       <enum>QTabWidget::Triangular</enum>
+       <enum>QTabWidget::Rounded</enum>
       </property>
       <property name="currentIndex">
        <number>-1</number>
@@ -98,6 +107,16 @@
     </item>
    </layout>
   </widget>
+  <widget class="QMenuBar" name="menubar">
+   <property name="geometry">
+    <rect>
+     <x>0</x>
+     <y>0</y>
+     <width>800</width>
+     <height>21</height>
+    </rect>
+   </property>
+  </widget>
   <action name="action_SwitchMiniStyle">
    <property name="checkable">
     <bool>true</bool>
@@ -109,7 +128,29 @@
     <string>F11</string>
    </property>
   </action>
+  <action name="action_App_quit">
+   <property name="icon">
+    <iconset resource="../res_.qrc">
+     <normaloff>:/images/res/Images/cancel.png</normaloff>:/images/res/Images/cancel.png</iconset>
+   </property>
+   <property name="text">
+    <string>Выход</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+Q</string>
+   </property>
+  </action>
+  <action name="action_ShowPopup">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>Show Popup</string>
+   </property>
+  </action>
  </widget>
- <resources/>
+ <resources>
+  <include location="../res_.qrc"/>
+ </resources>
  <connections/>
 </ui>
