--- a/trunk/PyChat 1.16/res/style/traytheme/onlalert/header.css
+++ b/trunk/PyChat 1.16/res/style/traytheme/onlalert/header.css
@@ -2,6 +2,6 @@
 background-color: #171a1b;
 border-top: none;*/
 /*color : white;*/
-background-color: transparent;
+/*background-color: transparent;*/
 background-image: url('%path%/msg/headerg.png');
 /*background-image : url(res/Images/tray_pics/header.png);*/
